--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<meta name="twitter:card" content="summary" />
 	<meta name="twitter:description"
 		content="Decole suas vendas com a agência que faturou R$ 300.000 com apenas 1 produto, confira→" />
-	<meta name="twitter:title" content="Gozorila | Site OFICIAL" />
+	<meta name="twitter:title" content="Alta Ecommerce | Decole seu negócio" />
 	<meta name="twitter:image" content="assets/images/icone-sem-fundo-1080.webp" />
 	<meta name="geo.region" content="BR" />
 	<meta name="description"
