--- a/index.html
+++ b/index.html
@@ -414,7 +414,8 @@
             </a>
                 <div class="col-12 col-md-6 col-lg-3">
                     <a href="https://richardlp1.github.io/altaecommerce/gestao-de-anuncios.html">
-                    <div class="card-wrapper legend zoom">
+                    <div class="card-wrapper legend zoom" style="    margin-top: 20px;
+                    margin-bottom: 20px;">
                         <div class="card-box align-center ">
                             <span class="mbr-iconfont">
                                 <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
