--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                     venda</a><a class="dropdown-item text-primary display-4" href="#features2-f">Social
                                     media</a></div>
                         </li>
-                        <li class="nav-item"><a class="nav-link link text-primary display-4" href="#header11-1">
+                        <li class="nav-item"><a class="nav-link link text-primary display-4" href="#slider2-17">
                                 Parceiros</a></li>
                         <li class="nav-item"><a class="nav-link link text-primary display-4" href="#form5-6">Contato</a>
                         </li>
