--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                     venda</a><a class="dropdown-item text-primary display-4" href="#features2-f">Social
                                     media</a></div>
                         </li>
-                        <li class="nav-item"><a class="nav-link link text-primary display-4" href="#header11-1">
+                        <li class="nav-item"><a class="nav-link link text-primary display-4" href="#slider2-17">
                                 Parceiros</a></li>
                         <li class="nav-item"><a class="nav-link link text-primary display-4" href="#form5-6">Contato</a>
                         </li>
@@ -994,8 +994,7 @@
                 <div class="media-container-row">
                     <div class="col-md-6 copyright">
                         <p class="mbr-text mbr-fonts-style display-4">
-                            © 2021 | AltaEcommerce by <a href="https://gustavobragaia.github.io/portfolio/"
-                                class="text-primary" target="_blank">@gbsdesigner</a> | Todos os direitos resevados</p>
+                            © 2021 | AltaEcommerce by | Todos os direitos resevados</p>
                     </div>
                     <div class="col-md-6">
 
