--- a/index.html
+++ b/index.html
@@ -954,6 +954,7 @@
                             <div class="col-lg-12 col-md-12 col-sm-12 align-center mbr-section-btn"><button
                                     type="submit" class="botaomain btn btn-primary display-4">Quero Alavancar Minhas
                                     Vendas!</button></div>
+                                    <div class="mbr-section-btn mt-3"><a class="botaomain btn btn-secondary display-7" href="https://api.whatsapp.com/send?phone=5516981711777&amp;text=Ol%C3%A1%20Alta,%20estou%20decidido%20e%20quero%20alavancar%20minhas%20convers%C3%B5es!">Contatar direto no whatsapp</a></div>
                         </div>
                     </form>
                 </div>
