--- a/gestao-de-anuncios.html
+++ b/gestao-de-anuncios.html
@@ -738,6 +738,8 @@
                                     type="submit" class="botaomain btn btn-primary display-4"><span
                                         class="mbrib-rocket mbr-iconfont mbr-iconfont-btn"
                                         style="font-size: 33px;"></span>Enviar dúvida</button></div>
+                                        <div class="mbr-section-btn mt-3"><a class="botaomain btn btn-secondary display-7" href="https://api.whatsapp.com/send?phone=5516981711777&amp;text=Ol%C3%A1%20Alta,%20estou%20decidido%20e%20quero%20alavancar%20minhas%20convers%C3%B5es!">Contatar direto no whatsapp</a></div>
+
                         </div>
                     </form>
                 </div>
@@ -779,8 +781,7 @@
                 <div class="media-container-row">
                     <div class="col-md-6 copyright">
                         <p class="mbr-text mbr-fonts-style display-4">
-                            © 2021 | AltaEcommerce by <a href="https://gustavobragaia.github.io/portfolio/"
-                                class="text-primary" target="_blank">@gbsdesigner</a> | Todos os direitos resevados</p>
+                            © 2021 | AltaEcommerce | Todos os direitos resevados</p>
                     </div>
                     <div class="col-md-6">
 
